--- a/Assignment1/csdept.html
+++ b/Assignment1/csdept.html
@@ -42,14 +42,20 @@
         facilities and resources to help students excel.
       </p>
 
+      <div class="text-center mb-4">
+        <a href="survey.html" class="btn btn-primary"
+          >Take the CS Department Survey</a
+        >
+      </div>
+
       <h3>MS Degree Programs</h3>
       <ul>
         <li>MS in Computer Science</li>
-        <li>MS in Information Technology</li>
         <li>MS in Software Engineering</li>
+        <li>MS in Information Systems</li>
       </ul>
 
-      <h3>Required Courses for MS Programs</h3>
+      <h3>Required Courses for MS Computer Science</h3>
       <table class="table table-bordered">
         <thead class="thead-light">
           <tr>
@@ -59,29 +65,75 @@
         </thead>
         <tbody>
           <tr>
-            <td>CS500</td>
-            <td>Advanced Algorithms</td>
+            <td>CS 530</td>
+            <td>Mathematical Foundations of Computer Science</td>
           </tr>
           <tr>
-            <td>CS510</td>
-            <td>Database Systems</td>
+            <td>CS 531</td>
+            <td>Computer Systems and Fundamentals of Systems Programming</td>
           </tr>
           <tr>
-            <td>CS520</td>
-            <td>Operating Systems</td>
-          </tr>
-          <tr>
-            <td>CS530</td>
-            <td>Software Engineering</td>
+            <td>CS 583</td>
+            <td>Analysis of Algorithms</td>
           </tr>
         </tbody>
       </table>
 
-      <div class="text-center mb-4">
-        <a href="survey.html" class="btn btn-primary"
-          >Take the CS Department Survey</a
-        >
-      </div>
+      <h3>Required Courses for MS Software Engineering</h3>
+      <table class="table table-bordered">
+        <thead class="thead-light">
+          <tr>
+            <th>Course Number</th>
+            <th>Course Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>SWE 619</td>
+            <td>OO Software Specification and Construction</td>
+          </tr>
+          <tr>
+            <td>SWE 621</td>
+            <td>Software Design and Architecture</td>
+          </tr>
+          <tr>
+            <td>SWE 632</td>
+            <td>User Interface Design and Development</td>
+          </tr>
+          <tr>
+            <td>SWE 637</td>
+            <td>Software Testing</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h3>Required Courses for MS Information Systems</h3>
+      <table class="table table-bordered">
+        <thead class="thead-light">
+          <tr>
+            <th>Course Number</th>
+            <th>Course Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>COMP 502</td>
+            <td>Mathematical Foundations of Computing I</td>
+          </tr>
+          <tr>
+            <td>CS 550</td>
+            <td>Database Systems</td>
+          </tr>
+          <tr>
+            <td>INFS 622</td>
+            <td>Information Systems Analysis and Design</td>
+          </tr>
+          <tr>
+            <td>INFS 580</td>
+            <td>Analytics: Big Data to Information</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
