update survey title and adjust container width

--- a/Assignment1/survey.html
+++ b/Assignment1/survey.html
@@ -24,9 +24,9 @@
     </style>
   </head>
   <body>
-    <div class="container mt-4">
+    <div class="container mt-4 w-50">
       <div class="heading-box text-center">
-        <h1>CS Department Survey</h1>
+        <h1>Prospective Student Survey</h1>
       </div>
       <form autocomplete="on">
         <div class="form-group">
