remove assets folder, move image to root

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -85,7 +85,7 @@ Submitted by: Hamaad Zuberi -->
         </div>
 
         <div class="w3-third w3-center">
-          <img src="assets/image.png" alt="Your Image" style="width: 100%" />
+          <img src="image.png" alt="Your Image" style="width: 100%" />
         </div>
       </div>
     </div>
