--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -23,12 +23,12 @@ Submitted by: Hamaad Zuberi -->
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- Navbar -->
-    <div class="w3-top">
+    <div class="w3-top custom-style">
       <div class="w3-bar w3-green w3-card w3-left-align w3-large">
         <a
           class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-green"
