--- a/Assignment1/csdept.html
+++ b/Assignment1/csdept.html
@@ -7,24 +7,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <style>
-      body {
-        background-color: #f0f0f0;
-      }
-      h1 {
-        color: #006633;
-      }
-      .heading-box {
-        border: 5px solid #006633;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-        padding: 20px;
-        margin-bottom: 20px;
-      }
-      .custom-style {
-        font-family: Arial, sans-serif;
-        color: #333;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="custom-style">
     <div class="container mt-4">
