--- a/Assignment1/survey.html
+++ b/Assignment1/survey.html
@@ -8,20 +8,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <style>
-      body {
-        background-color: #f0f0f0;
-      }
-      h1 {
-        color: #006633;
-      }
-      .heading-box {
-        border: 5px solid #006633;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-        padding: 20px;
-        margin-bottom: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container mt-4 w-50">
