--- a/Assignment1/csdept.html
+++ b/Assignment1/csdept.html
@@ -1,3 +1,9 @@
+<!-- SWE 642 - Assignment 1
+Submitted by: Hamaad Zuberi -->
+
+<!-- The file is a basic HTML webpage featuring the website for GMU Computer Science
+Department. It lists MS Degree Programs offered by the department and their required
+courses. -->
 <!DOCTYPE html>
 <html>
   <head>
