--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -1,8 +1,8 @@
-<!-- SWE 645 - Assignment 1
+<!-- SWE 642 - Assignment 1
 Submitted by: Hamaad Zuberi -->
 
 <!-- The file is a basic HTML webpage featuring a navbar, a brief personal introduction (lipsum text), a “Quote of the 
- Day” section, and links to a home page and survey. It uses W3.CSS for styling. -->
+ Day” section, and links to the GMU CS Department and Prospective Students Survey. It uses W3.CSS for styling. -->
 
 <!DOCTYPE html>
 <html lang="en">
