--- a/Assignment1/survey.html
+++ b/Assignment1/survey.html
@@ -1,3 +1,7 @@
+<!-- SWE 642 - Assignment 1
+Submitted by: Hamaad Zuberi -->
+
+<!-- The file is a basic HTML webpage featuring the survey for prospective CS students. -->
 <!DOCTYPE html>
 <html>
   <head>
